--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.2
   google_fonts: ^6.2.1
   get: ^4.6.6
+  intl: ^0.20.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
